--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banking System</title>
   </head>
-  <body></body>
+  <body>
+    <script src="./assets/js/app.js"></script>
+    <script src="./assets/js/deposit.js"></script>
+    <script src="./assets/js/withdraw.js"></script>
+  </body>
 </html>
