Object Literal Based has been added

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Banking System</title>
   </head>
   <body>
-    <script src="./assets/js/app.js"></script>
-    <script src="./assets/js/deposit.js"></script>
-    <script src="./assets/js/withdraw.js"></script>
+    <script src="./assets/js/bank.js"></script>
+    <script src="./assets/js/appObject.js"></script>
   </body>
 </html>
